# countbeans

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  compose.dev.yml  compose.yml  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 119948e71831_pending_placeholder_unique_index.py  55807a7469f9_initial_schema.py  d282f0443da3_add_voided_columns_to_settlements.py  e3a7c1d9b042_events.py  f8f08c759a68_groups_bot_is_admin.py  ff5742cfcfcd_initial_schema.py
assets/: bean.py
docs/: spec.md  ux-command-review.md
src/countbeans/: __main__.py  log.py  main.py
src/countbeans/bot/: formatting.py  middleware.py  parsing.py  permissions.py  server.py
src/countbeans/bot/handlers/: _welcome.py  addexpense.py  addexpense_wizard.py  balance.py  currency.py  event.py  group.py  help.py  join.py  membership.py  settleup.py  simplify.py  start.py  statements.py  void.py
src/countbeans/bot/middleware/: __init__.py  admin_gate.py  logging_context.py  transactional.py
src/countbeans/bot/utils/: context.py  formatting.py  parsing.py  permissions.py  replies.py  (+1 more)
src/countbeans/config/: __init__.py  core.py
src/countbeans/db/: __init__.py  _base.py  _mixins.py  models.py
src/countbeans/dto/: __init__.py  commands.py  domain.py  results.py
src/countbeans/logging/: __init__.py  core.py
src/countbeans/services/: __init__.py  add_expense.py  balance.py  errors.py  events.py  group_info.py  membership.py  onboard.py  repositories.py  settlement.py  statements.py  uow.py  void_expense.py
tests/integrations/: _bot_harness.py  _seed.py  conftest.py  test_add_expense.py  test_addexpense_handler.py  test_addexpense_wizard.py  test_balance.py  test_balance_handler.py  test_chat_context.py  test_currency_handler.py  test_event_handler.py  test_events.py  test_group_handler.py  test_help_handler.py  test_membership_handlers.py  test_models.py  test_onboard.py  test_settle_up.py  test_settleup_handler.py  test_simplify_handler.py  test_start_join_handlers.py  test_statements.py  test_statements_handler.py  test_user_repository.py  test_void_expense.py  test_void_handler.py
tests/unit/: test_add_expense_command.py  test_admin_gate.py  test_all_keyword.py  test_apportion.py  test_balance_display.py  test_balance_dtos.py  test_event_commands.py  test_extract_quoted.py  test_formatting.py  test_general_flag.py  test_has_split_suffix.py  test_join_reply.py  test_logging.py  test_mixins.py  test_parse_money.py  test_parse_participants.py  test_permissions.py  test_raw_pairwise_transfers.py  test_settle_up_command.py  test_simplified_transfers.py  test_statements_render.py  test_suggested_owed.py  test_unquoted_description.py  test_wizard_tip.py
(+5 files in other folders)
