[project]
name = "countbeans"
version = "0.1.0"
description = "Telegram bot for managing and splitting expenses within Telegram groups"
authors = [{ name = "Daniel Ong", email = "ongfishh@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "asyncpg>=0.30.0",
    "alembic>=1.15.2",
    "aiogram>=3.28.2",
    "uuid-utils>=0.16.0",
    "pydantic>=2.13.4",
]

[project.scripts]
countbeans = "countbeans.main:main"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/countbeans"]
