[project]
name = "countbeans"
version = "0.1.0"
description = "Telegram bot for managing and splitting expenses within Telegram groups"
authors = [{ name = "Daniel Ong", email = "ongfishh@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "asyncpg>=0.30.0",
    "alembic>=1.15.2",
    "aiogram>=3.28.2",
    "uuid-utils>=0.16.0",
    "pydantic>=2.13.4",
    "python-json-logger>=4.1.0",
    "greenlet>=3.5.1",
    "nanoid>=2.0.0",
]

[project.scripts]
countbeans = "countbeans.main:main"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "watchfiles>=1.2.0",
    "pyright==1.1.410",
    "pre-commit>=4.0.0",
    "black>=26.5.1",
]

[tool.black]
target-version = ["py314"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportUnusedImport = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/countbeans"]
